# notisense

./: .gitignore  README.md  alembic.ini  main.py  makefile  pyproject.toml
.github/workflows/: dev.yml  prod.yml
src/notisense_api/application/v1/notifications/: controller.py  schema.py  service.py
src/notisense_api/application/workers/: notification_sender.py
src/notisense_api/domain/entities/: notification.py  root_model.py
src/notisense_api/domain/enums/: notification_status.py
src/notisense_api/domain/exceptions/: base_exception.py
src/notisense_api/domain/schemas/: common_schema.py
src/notisense_api/domain/utilities/: config.py  cryptography.py  email_template_manager.py  file_manager.py  slugify.py  tokenizer.py
src/notisense_api/infrastructure/persistence/: database.py
src/notisense_api/infrastructure/persistence/migrations/: env.py
src/notisense_api/infrastructure/persistence/migrations/versions/: 2025_08_19_1506-e52300d57274_initial.py
src/notisense_api/infrastructure/providers/default/: email.py
